Fix vertical alignment using flex
 - Firefox displayed the icon above the legend
 - Use `display: flex;` and `align-items: center;` to vertical align icon and text

--- a/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
@@ -67,8 +67,10 @@
 
         .variant-unit-price {
           color: $grey-700;
-          font-size: 0.9rem;
+          font-size: 0.85rem;
           margin-top: 15px;
+          position: relative;
+          left: -1px;
         }
 
         // Total price
