--- a/app/assets/stylesheets/darkswarm/cart-dropdown.scss
+++ b/app/assets/stylesheets/darkswarm/cart-dropdown.scss
@@ -55,7 +55,6 @@
 
     .unit-price {
       justify-content: flex-end;
-      align-items: baseline;
     }
 
   }
