--- a/app/assets/stylesheets/darkswarm/question-mark-icon.scss
+++ b/app/assets/stylesheets/darkswarm/question-mark-icon.scss
@@ -1,12 +1,20 @@
+.unit-price {
+  display: flex;
+  align-items: center;
+}
+
 .question-mark-icon {
   position: relative;
-  top: 6px;
+  right: 1px;
   background-image: image-url("question-mark-icon.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
 
   // Reset button element css attributes
   padding: 0;
   margin: 0;
   width: 20px;
+  min-width: 20px;
   height: 20px;
   background-color: transparent;
 
